--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^16.8.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
